--- a/privacy.html
+++ b/privacy.html
@@ -1,103 +1,77 @@
-<!doctype html>
-<html lang="fr">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Politique de confidentialite | Calin Rent Car</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;600;700&family=Space+Grotesk:wght@400;500;600;700&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="styles.css" />
-  </head>
-  <body>
-    <header class="site-header">
-      <nav class="nav">
-        <div class="logo">
-          <span class="logo-mark">CR</span>
-          <div>
-            <p>CALIN RENT CAR</p>
-            <small>Casablanca · MA</small>
-          </div>
-        </div>
-        <div class="nav-links">
-          <a href="index.html#about">A propos</a>
-          <a href="index.html#fleet">Flotte</a>
-          <a href="index.html#services">Services</a>
-          <a href="index.html#contact">Contact</a>
-        </div>
-        <a class="cta cta-small" href="index.html#contact">Reserver</a>
-      </nav>
-    </header>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>App Safety - CALIN RENT CAR</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background: #F6F1E8;
+            color: #1E2A2B;
+            padding: 20px;
+            line-height: 1.6;
+        }
+        h1, h2 {
+            color: #0F6B6E;
+        }
+        .card {
+            max-width: 860px;
+            margin: auto;
+            background: #FFFFFF;
+            padding: 22px;
+            border-radius: 14px;
+            box-shadow: 0 8px 24px rgba(30, 42, 43, 0.08);
+            border: 1px solid #E0D7C8;
+        }
+        .tag {
+            display: inline-block;
+            background: #F08A4B;
+            color: #FFFFFF;
+            padding: 4px 10px;
+            border-radius: 999px;
+            font-size: 12px;
+            margin-bottom: 12px;
+        }
+        a { color: #0F6B6E; text-decoration: none; }
+    </style>
+</head>
+<body>
+<div class="card">
+    <div class="tag">Active</div>
+    <h1>App Safety</h1>
+    <p><strong>CALIN RENT CAR</strong> is a simple catalog app. Users can view available cars and contact us by phone or email.
+        The app does not ask for accounts, does not store personal details, and does not share any user data.</p>
 
-    <main>
-      <section class="about">
-        <div class="section-title">
-          <p>Politique de confidentialite</p>
-          <h2>Protection des donnees</h2>
-        </div>
-        <div class="about-grid">
-          <div class="about-card reveal">
-            <h3>Collecte</h3>
-            <p>
-              Nous collectons les donnees necessaires pour traiter vos demandes de
-              location, assurer le suivi client et garantir la securite des
-              transactions.
-            </p>
-          </div>
-          <div class="about-card reveal">
-            <h3>Utilisation</h3>
-            <p>
-              Les informations sont utilisees pour confirmer les reservations,
-              communiquer les details du contrat et ameliorer nos services.
-            </p>
-          </div>
-          <div class="about-card reveal">
-            <h3>Partage</h3>
-            <p>
-              Vos donnees ne sont jamais vendues. Elles peuvent etre partagees
-              uniquement avec nos partenaires de service pour l'execution du contrat.
-            </p>
-          </div>
-          <div class="about-card reveal">
-            <h3>Securite</h3>
-            <p>
-              Nous appliquons des mesures techniques et organisationnelles afin de
-              proteger vos informations contre tout acces non autorise.
-            </p>
-          </div>
-          <div class="about-card reveal">
-            <h3>Vos droits</h3>
-            <p>
-              Vous pouvez demander l'acces, la correction ou la suppression de vos
-              donnees en ecrivant a notre equipe.
-            </p>
-          </div>
-          <div class="about-card reveal">
-            <h3>Contact</h3>
-            <p>
-              CALIN RENT CAR, Magasin N 1B Immeuble 12 Bis Angle Rue Cherrada et Rue
-              Ouled Said, Casablanca, MA
-            </p>
-            <p>Email: contact@calinrentcar.ma</p>
-          </div>
-        </div>
-      </section>
-    </main>
+    <h2>1. Data Use</h2>
+    <p>We do not collect, store, process, sell, or share personal or sensitive user information.
+        The app is limited to showing car details and opening your phone or email app.</p>
 
-    <footer>
-      <div class="footer-content">
-        <div class="footer-card">
-          <h3>Retour</h3>
-          <p>Revenir a la page principale.</p>
-          <a class="cta cta-small" href="index.html">Accueil</a>
-        </div>
-      </div>
-      <p class="footnote">© 2024 Calin Rent Car. Tous droits reserves.</p>
-    </footer>
+    <h2>2. Permissions</h2>
+    <p>The app does not request access to location, contacts, camera, microphone, storage, or device identifiers.</p>
 
-    <script src="script.js"></script>
-  </body>
+    <h2>3. Contact Actions</h2>
+    <p>When you tap call or email, the app opens your phone dialer or your email client. Messages are sent by your own app.</p>
+
+    <h2>4. Company Details</h2>
+    <p>
+        <strong>CALIN RENT CAR</strong><br>
+        Activity: Car rental without driver<br>
+        Address: MAGASIN N 1B IMMEUBLE 12 BIS ANGLE RUE CHERRADA ET RUE OULED SAID, Casablanca, MA<br>
+        DUNS Number: 535481033<br>
+        RC: 449403 (Tribunal de Casablanca)<br>
+        ICE: 002361914000002<br>
+        Legal form: Societe a Responsabilite Limitee a Associe Unique<br>
+        Capital: 100 000 DHS
+    </p>
+
+    <h2>5. Contact</h2>
+    <p>
+        Phone: <a href="tel:+212661661416">+212 661 661 416</a><br>
+        Email: <a href="mailto:contact@calinrentcar.ma">contact@calinrentcar.ma</a>
+    </p>
+
+    <h2>6. Last Updated</h2>
+    <p>January 25, 2026</p>
+</div>
+</body>
 </html>
