--- a/privacy.html
+++ b/privacy.html
@@ -67,7 +67,7 @@
     <h2>5. Contact</h2>
     <p>
         Phone: <a href="tel:+212661661416">+212 661 661 416</a><br>
-        Email: <a href="mailto:contact@calinrentcar.ma">contact@calinrentcar.ma</a>
+        Email: <a href="mailto:rentreservation@calinrentcar.space">contact@calinrentcar.ma</a>
     </p>
 
     <h2>6. Last Updated</h2>
